--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -2,51 +2,51 @@
 
 body {
     background-color: #E5E5E5;
-    font-family: 'Poppins', sans-serif;
     overflow-y: hidden;
+    font-family: 'Poppins', sans-serif;
 }
 
 .wrapper {
-    display: flex;
     width: 100%;
+    display: flex;
 }
 
 #navbar {
-    position: fixed;
-    margin-left: 260px;
+    max-width: 100%;
     top: 6px;
     right: 6px;
     left: 12px;
-    max-width: 100%;
+    margin-left: 260px;
+    position: fixed;
     transition: all 0.3s;
     z-index: 999;
 }
 
 #navbar .navbar {
-    background-color: #4ca9df;
     max-width: 100%;
-    border-radius: 15px;
     height: 48px;
+    background-color: #4ca9df;
+    border-radius: 15px;
 }
 
 #navbar .btn {
-    background-color: transparent;
     color: white;
+    background-color: transparent;
     margin-left: -8px;
     font-size: 18px;
 }
 
 #sidebar {
     width: 260px;
-    position: fixed;
     top: 6px;
     left: 6px;
     height: 100vh;
-    z-index: 999;
-    border-radius: 15px 15px 0 0;
+    padding: 8px;
     background-color: #4ca9df;
+    border-radius: 15px 15px 0 0;
+    position: fixed;
+    z-index: 999;
     transition: all 0.3s;
-    /* box-shadow: 6px 0 8px -6px rgb(153, 153, 153); */
     font-family: 'Poppins', sans-serif !important;
 }
 
@@ -56,21 +56,15 @@ body {
 
 #content {
     width: 100%;
-    height: 90vh;
-    /* right: 6px; */
-    /* left: 12px; */
+    height: 91vh;
     margin-left: 272px;
     margin-right: 6px;
     margin-top: 60px;
-    border-radius: 15px;
-    background-color: white;
-    /* position: fixed; */
-    /* overflow-y: hidden; */
-    overflow-x: hidden;
     padding: 20px;
-    /* padding-right: 5px; */
+    background-color: white;
+    border-radius: 15px 15px 0 0;
+    overflow-x: hidden;
     transition: all 0.3s;
-    /* z-index: 998; */
 }
 
 #navbar.active {
@@ -92,10 +86,10 @@ a[data-toggle="collapse"] {
 }
 
 .dropdown-toggle::after {
-    display: block;
-    position: absolute;
     top: 46%;
     right: 15px;
+    display: block;
+    position: absolute;
     transition: 0.3s;
 }
 
@@ -105,9 +99,9 @@ a[data-toggle="collapse"] {
     }
 
     #sidebar.active {
+        height: 88vh;
         margin-left: 0;
         margin-top: 64px;
-        height: 88vh;
     }
 
     #content {
@@ -122,10 +116,9 @@ a[data-toggle="collapse"] {
 a,
 a:hover,
 a:focus {
-    color: inherit;
+    color: white;
     text-decoration: none;
     transition: all 0.3s;
-    color: white;
 }
 
 #sidebar .sidebar-header {
@@ -152,24 +145,32 @@ a:focus {
     font-weight: 500;
 }
 
+.sidebar-box {
+    margin-bottom: 5px;
+    padding: 10px;
+    display: block;
+    background-color: #6cb6e0;
+    border-radius: 15px;
+    font-size: 14px;
+}
 
 .background {
+    margin-bottom: 5px;
     background-color: #6cb6e0;
-    margin: 5px;
     border-radius: 15px;
 }
 
 ul ul a {
-    margin-bottom: 20px !important;
     font-size: 13px !important;
-    padding-left: 15px !important;
     font-weight: 200 !important;
+    margin-bottom: 20px !important;
+    padding-left: 15px !important;
 }
 
 .fa-circle {
     font-size: 8px !important;
-    vertical-align: middle;
     margin-right: 5px;
+    vertical-align: middle;
 }
 
 .down {
